--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,10 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.container{
+    height: 650 px;  
+    background-image: url('./assets/image3.jpg'); 
+    background-size: 100% ;  
+    background-size: cover;
+}
